@@ -8,7 +8,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/employee")
@@ -23,7 +22,7 @@ public class EmployeeController implements IEmployeeController<Object, Employee>
     @Override
     @GetMapping
     public ResponseEntity<List<Object>> getAllEmployees() {
-        List<Object> employees = employeeService.getAllEmployees().stream().map(emp -> (Object) emp).collect(Collectors.toList());
+        List<Object> employees = employeeService.getAllEmployees().stream().map(Object.class::cast).toList();
         return ResponseEntity.ok(employees);
     }
 
